# jupyter-best-practices

./: .editorconfig  README.md  pyproject.toml  tox.ini
 notebook/: example.ipynb
datasets/: data.xlsx
jupyter_best_practices/: __init__.py  demo.py
notebooks/: example.ipynb
tests/: test_demo.py
